--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "kasa",
+  "homepage": "https://celmax85.github.io/Kasa-openclassroom",
   "private": true,
   "version": "0.0.0",
   "type": "module",
